# and-emu

./: CMakeLists.txt  emulator.sln
capstone/: Android.mk  CMakeLists.txt  CREDITS.TXT  MCInstrDesc.c  MCInstrDesc.h  MCRegisterInfo.c  MCRegisterInfo.h  Makefile  README  SStream.c  SStream.h  cs.c  cs_priv.h  make.sh  pkgconfig.mk  utils.c  utils.h
capstone/arch/X86/: X86ATTInstPrinter.c  X86Disassembler.c  X86DisassemblerDecoder.c  X86GenAsmWriter.inc  X86GenAsmWriter1.inc  X86GenAsmWriter1_reduce.inc  X86GenAsmWriter_reduce.inc  X86GenDisassemblerTables_reduce.inc  X86GenRegisterInfo.inc  X86IntelInstPrinter.c  X86Mapping.c  X86Mapping.h  X86Module.c
capstone/include/: platform.h
emulator/: crc32.cpp  crc32.h  dlfcn.cpp  dlfcn.h  elf.h  emulator.cpp  emulator.vcproj  engine.cpp  engine.h  hexdump.cpp  linker.cpp  linker.h  linker_phdr.cpp  linker_phdr.h  main.cpp  memory.cpp  type.h  win.h
emulator/armhelper/: build.bat  build.py
emulator/armhelper/jni/: Android.mk  Application.mk  armhelper.c  base.h  malloc.c  math.S  snprintf.cpp  sprintf.cpp  sscanf.cpp
emulator/data/local/tmp/: toolbox
emulator/jvm/: alloc.cpp  alloc.h  app.cpp  classobject.h  common.h  dexproto.h  dvmdex.h  func.cpp  java.cpp  java.h  jni.cpp  jni.h  jvm.cpp  jvm.h  method.h  object.h  registermap.h  stack.cpp  stack.h  utfstring.cpp  utfstring.h
emulator/proc/: version
emulator/proc/1234/: maps
emulator/proc/net/: arp  tcp
emulator/proc/proc/1234/: cmdline  maps
emulator/proc/proc/183/: cmdline
emulator/proc/proc/self/: maps
emulator/proc/self/: maps  status
emulator/proc/sys/kernel/random/: uuid
emulator/runtime/: dirent_win.h  emulator.cpp  emulator.h  libc.cpp  malloc.cpp  opendir.cpp  rc4.cpp  rc4.h  runtime.h  system.cpp  unpack.cpp  unpack.h
emulator/sys/class/net/wlan0/: address
emulator/system/: default.prop
include/unicorn/: arm.h  m68k.h  sparc.h  unicorn.h  x86.h
zlib/: CMakeLists.txt
